2014-02-05  Dario Rodriguez <dario@artica.es>
	
	* index.php,
	godmode/setup/setup.php: First implementation of autologin feature.

2014-02-05  Sancho Lerena <slerena@artica.es>

	* operation/newsletter/address_creation.php,
	operation/newsletter/issue_creation.php,
        operation/newsletter/address_definition.php,
        operation/newsletter/queue_manager.php,
        operation/newsletter/issue_definition.php,
        operation/newsletter/newsletter_definition.php,
        operation/main_menu.php,
        operation/side_menu.php: Changes on CRM ACL system. Fixed old settings for
	permission bit for Newsletter.

2014-02-04  Mario Pulido <mario.pulido@artica.es>

	* integria.centos.spec,
        integria.spec: Fixed bug. Updates by rpm

2014-02-04  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php
	include/api.php: Created new functions to 
	delete and verify an user.

2014-02-04  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/grupos/configurar_grupo.php: Fixed bug.

	* operation/invoices/invoices.php: Added file
	attachment to invoices.

2014-02-04  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php,
	include/api.php: Created a new function to create
	companies using the API.

2014-02-04  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_html.php: Added the function
	"get_last_date_control".

	* include/functions_form.php: Added the new date contol to
	the incident search form in the function
	"form_search_incident".

	* include/functions_incidents.php: Modified the function
	"filter_incidents" to add the new date filter.

	* include/functions_db.php: Added the function
	"get_last_dates".

	* operation/invoices/invoice_stats.php,
	  operation/invoices/invoice_detail.php,
	  operation/incidents/incident_search.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php,
	  operation/leads/lead_export.php,
	  operation/leads/lead_detail.php: Added the new date